fix(REI): remove getInputIngredients methods and mark correct slots as inputs